--- a/payment/index.html
+++ b/payment/index.html
@@ -99,13 +99,13 @@
     </div>
     <!--Model Popup ends-->
 
-    
-<button id="rzp-button1" class="btn btn-primary">Online Payment</button>
+<span id='loader'><img src='ajax-loader.gif'><h3>Please wait loading ...</h3></span>
+<!-- <button id="rzp-button1" class="btn btn-primary">Online Payment</button> -->
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
 
-
-var api = "/api/createRazorPayOrder";
+var appUrl = "https://arangamapi.azurewebsites.net";
+var api = appUrl+"/api/createRazorPayOrder";
 var currentRequest = null;   
 function createOrder(email){
     currentRequest = $.ajax({
@@ -118,6 +118,7 @@ function createOrder(email){
       success: function(data) {
         var response = data.data;
         executeRazorPay(response);
+		$("#loader").hide();
       },
       error:function(e){
 		  console.log(e);        
@@ -146,7 +147,7 @@ function executeRazorPay(data){
 
             var saveData = $.ajax({
                 type: "POST",
-                url: "/api/checkoutRazorPayStatus",
+                url: appUrl+"/api/checkoutRazorPayStatus",
                 dataType: "json",
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({
@@ -195,16 +196,24 @@ function executeRazorPay(data){
 const queryString = window.location.search;
 const urlParams = new URLSearchParams(queryString);
 const email = urlParams.get('email')
-document.getElementById('rzp-button1').onclick = function(e){
-	console.log(email);
+
+if(email){
+   createOrder(email);
+   //e.preventDefault();
+}else{
+	alert("Invalid Data")
+}
+
+/*document.getElementById('rzp-button1').onclick = function(e){
+	//console.log(email);
     if(email){
-        createOrder(email);
-        e.preventDefault();
+       // createOrder(email);
+       // e.preventDefault();
     }else{
         alert("Invalid Data")
     }    
     //rzp1.open();
-}
+}*/
 </script>
 </body>
 </html>
